--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 aiogram==3.3.0
-aiohttp==3.8.5
-python-dotenv==1.0.0
-requests==2.31.0
+aiohttp>=3.9.0,<4.0.0
+python-dotenv>=1.0.0
+requests>=2.31.0
