--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 aiogram==3.3.0
-aiohttp>=3.9.0,<4.0.0
-python-dotenv>=1.0.0
-requests>=2.31.0
+aiohttp==3.9.5
+aiofiles==23.2.1
+pydantic==2.5.3
+python-dotenv==1.1.1
+requests==2.32.5
+yarl==1.22.0
